# flex-vg

./: .gitignore  Cargo.toml  README.md
benches/: variation.rs
src/: lib.rs  main.rs  variation.rs
src/data_structures/: graph.rs
src/graph/: dot.rs  graph.rs  macros.rs  mod.rs  types.rs  utils.rs
src/io/: cli.rs  mod.rs  reference.rs  serialization.rs  types.rs  variation.rs
src/vg/: graph.rs
