[package]
name = "graphite"
version = "0.1.0"
authors = ["Njagi Mwaniki <njagi@urbanslug.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 3
lto = true
debug=true

[dependencies]
needletail = "^0.3.1"
serde = {version = "^1.0.102", features = ["derive"]}
vcf = "^0.1.0"
serde_cbor = "^0.10.2"
serde_derive = "^1.0.102"
serde_test = "^1.0.102"

bincode = "^1.2.0"
serde_json = "1.0"